tweaked the base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>{% block title %}Bookr{% endblock %}</title>
+    <title>{% block title %}Kevin Gopito Bookr{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'main.css' %}">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Source+Sans+Pro&display=swap">
@@ -57,7 +57,7 @@
     </div>
     {% endfor %}
     {% block content %}
-	  <h4>Recent Reviews</h4>
+	  <h4>Welcome to Kevin Gopito Bookr System </h4>
 	  <div id="recent_reviews"></div>
 	  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
 	  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
